[Feat] Completed music library management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.host=localhost:8000
 server.port=8000
 
 #DATABASE
-spring.datasource.username=postgres
-spring.datasource.password=pacis123
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.url=jdbc:postgresql://localhost:5432/mlms?useSSL=false
 
 #JWT
