--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version> <!-- Use the latest version -->
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
