--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,20 +2,12 @@
 server.host=localhost:8000
 server.port=8000
 
-#DATABASE
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.url=jdbc:postgresql://localhost:5432/mlms?useSSL=false
+spring.profiles.active=dev
 
 #JWT
 jwt.secret=${NX_JWT_SECRET:oX4E3yhCO7f9ysD@by6MMR_@YeNRwP}
 jwt.expiresIn=86400000
 
-#JPA
-spring.datasource.testOnBorrow=true
-spring.datasource.validationQuery=SELECT 1
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
 
 #JDBC
 server.session.timeout=60
