Adding some service test and repository test

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 
 #DATABASE
-spring.datasource.username=postgres
-spring.datasource.password=pacis123
+spring.datasource.username=Christa_user
+spring.datasource.password=Bella00
 spring.datasource.url=jdbc:postgresql://localhost:5432/mlms?useSSL=false
 
 #JPA
